2005-05-25  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/install/index.html (href): fixed case in "go here". Added
	mingw installer for windows.

2005-05-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/slackware.html (Module): remove.

2005-05-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site: Add missing translation headers.

2005-05-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/thanks.html (href): add Matthias Neeracher.

	* scripts/format-page.py (browser_language): clarify 

2005-05-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl: recode latin1..utf-8 some files.

2005-05-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/index.html (href): announce .22
	add 2.4.4 suse.

2005-05-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* nl/switch/advantages.html: support: language fix

	* site/switch/advantages.html: language fix.

	* nl/switch/advantages.html: vertaal nada, zilch.

	* site/images/nereid-shot-small.png (Module): don't rely on
	browser scaling.

	* site/switch/howto.html: link to scaled image.

	* site/install/getting-started.html: .ly.txt clarification

	* site/install/macos.html: language fixes.

	* site/switch/tour.html: print database: language fix.

	* site/install/getting-started.html: bug report: language fix.

	* site/switch/tour.html: intro: language fix

	* site/switch/howto.html: part extraction: language fix.

	* site/switch/tour.html: mutopia: language fix. 

	* site/old-news.html (href): fix link.

	* site/switch/advantages.html: rewrite some sentences.

2005-05-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (LANGUAGES): Enable nl.

	* scripts/format-page.py (grab_gettext): Enable i18n.

	* nl/: Translation updates <tdm@dds.nl>.
	
	* nl/install/windows.html: Update.

	* nl/contact.ihtml: New file.

2005-04-26  Graham Percival  <gperlist@shaw.ca>

	* site/install/windows.html: suggest that people run setup.exe
	again before reporting problems.

2005-04-26  Jan Nieuwenhuizen  <janneke@gnu.org>
