@@ -1,3 +1,9 @@
+2005-05-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/install/index.html (href): add Mac binary. 
+
+	* site/images/fink.png (Module): separate logo for Fink
+
 2005-05-25  Pedro Kroger  <kroeger@pedrokroeger.net>
 
 	* site/install/index.html (href): fixed case in "go here". Added
